--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="container">
     <header>
         <h1>Rock, Paper, Scissors</h1>
     </header>
     <main>
-        <div class="container">
-            <button id="rock">Rock</button>
-            <button id="paper">Paper</button>
-            <button id="scissors">Scissors</button>
+        <div class="game">
+            <div class="buttons">
+                <button id="rock">Rock 🪨</button>
+                <button id="paper">Paper 📃</button>
+                <button id="scissors">Scissors ✂️</button>
+            </div>
         </div>
     </main>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
